# open-build-service-connector

./: .dir-locals.el  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .travis.yml  .vscodeignore  CHANGELOG.md  LICENSE  README.md  Vagrantfile  docker-compose.yml.patch  generate_icons.sh  package.json  runTests.sh  runUiTests.sh  start-mini-obs.sh  tsconfig.base.json  tsconfig.frontend.json  tsconfig.json  tslint.json  webpack.config.js
.github/workflows/: ci.yml  ui_tests.yml
doc/: names.md
media/: SOURCES
mocklibsecret/: .clang-format  meson.build  run_tests.py  secret.c  test.js
scripts/: change_svg_color.py
src/: accounts.ts  active-package-watcher.ts  assert.ts  base-components.ts  bookmark-tree-view.ts  bookmarks.ts  build-control.ts  check-out-handler.ts  combo-box-input.ts  constants.ts  current-package-watcher.ts  current-project-view.ts  decorators.ts  dependency-injection.ts  empty-file-provider.ts  extension.ts  history-graph-common.ts  history-graph.ts  instance-info.ts  logging.ts  osc-build-task.ts  package-file-contents.ts  project-bookmarks.ts  project-view.ts  project.ts  repository.ts  scm-history.ts  util.ts  vcs.ts  vscode-dep.ts  workspace.ts
src/frontend/: draw-graph.ts
src/test/: runTest.ts
src/test/suite/: account.test.ts  active-package-watcher.test.ts  assert.test.ts  bookmark-tree-view.test.ts  check-out-handler.test.ts  current-package-watcher.test.ts  current-project-view.ts  decorators.test.ts  fakes.test.ts  fakes.ts  history-graph.test.ts  index.ts  logging.test.ts  (+11 more)
src/ui-tests/: runTests.ts  testEnv.ts  util.ts
(+6 files in other folders)
